--- a/index.html
+++ b/index.html
@@ -22,37 +22,91 @@
             overflow-y: auto;
         }
         #input {
-            width: 80%;
+            width: 70%;
             margin-top: 10px;
+        }
+        #sendButton {
+            width: 20%;
+            margin-top: 10px;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #007bff;
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+        #sendButton:hover {
+            background-color: #0062cc;
+        }
+        .loading {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            font-weight: bold;
+            color: #007bff;
         }
     </style>
 </head>
 <body>
-    <div id="chat"></div>
-    <input id="input" type="text" placeholder="Type your message...">
+    <div id="chat">
+        <div>ChatGPT: 您好！我是ChatGPT，您可以在这里与我聊天。</div>
+    </div>
+    <div>
+        <input id="input" type="text" placeholder="请输入您的消息...">
+        <button id="sendButton">发送</button>
+    </div>
+    <div id="loading" class="loading" style="display: none;">正在加载...</div>
     <script>
         const apiKey = '请在这里填写你的_API_KEY';
+
         async function sendMessage(message) {
             const responseElement = document.createElement('div');
             responseElement.textContent = 'ChatGPT: ...';
             document.getElementById('chat').appendChild(responseElement);
-            const response = await fetch('https://api.openai.com/v1/engines/davinci-codex/completions', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${apiKey}`
-                },
-                body: JSON.stringify({
-                    prompt: `User: ${message}\nChatGPT:`,
-                    max_tokens: 50,
-                    n: 1,
-                    stop: null,
-                    temperature: 0.5
-                })
-            });
-            const data = await response.json();
-            responseElement.textContent = 'ChatGPT: ' + data.choices[0].text.trim();
+
+            try {
+                const response = await fetch('https://api.openai.com/v1/engines/davinci-codex/completions', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${apiKey}`
+                    },
+                    body: JSON.stringify({
+                        prompt: `User: ${message}\nChatGPT:`,
+                        max_tokens: 50,
+                        n: 1,
+                        stop: null,
+                        temperature: 0.5
+                    })
+                });
+
+                const data = await response.json();
+                responseElement.textContent = 'ChatGPT: ' + data.choices[0].text.trim();
+            } catch (error) {
+                responseElement.textContent = 'ChatGPT: 出了点问题，请稍后再试。';
+            }
+
+            document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
         }
+
+        document.getElementById('sendButton').addEventListener('click', () => {
+            const message = document.getElementById('input').value.trim();
+            if (message) {
+                const messageElement = document.createElement('div');
+                messageElement.textContent = 'User: ' + message;
+                document.getElementById('chat').appendChild(messageElement);
+                document.getElementById('input').value = '';
+                document.getElementById('loading').style.display = 'flex';
+                sendMessage(message).finally(() => {
+                    document.getElementById('loading').style.display = 'none';
+                });
+            }
+        });
+
         document.getElementById('input').addEventListener('keydown', (event) => {
             if (event.key === 'Enter') {
                 const message = event.target.value.trim();
@@ -61,7 +115,10 @@
                     messageElement.textContent = 'User: ' + message;
                     document.getElementById('chat').appendChild(messageElement);
                     event.target.value = '';
-                    sendMessage(message);
+                    document.getElementById('loading').style.display = 'flex';
+                    sendMessage(message).finally(() => {
+                        document.getElementById('loading').style.display = 'none';
+                    });
                 }
             }
         });
