--- a/index.html
+++ b/index.html
@@ -1,127 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatGPT</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        #chat {
-            width: 80%;
-            height: 60%;
-            border: 1px solid #ccc;
-            padding: 10px;
-            overflow-y: auto;
-        }
-        #input {
-            width: 70%;
-            margin-top: 10px;
-        }
-        #sendButton {
-            width: 20%;
-            margin-top: 10px;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: #fff;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-        #sendButton:hover {
-            background-color: #0062cc;
-        }
-        .loading {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 24px;
-            font-weight: bold;
-            color: #007bff;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="chat">
-        <div>ChatGPT: 您好！我是ChatGPT，您可以在这里与我聊天。</div>
+    <header>
+    <div class="logo" style="background-image: url('https://ga.chaixian.tk/Logo/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230420051439.png')"></div>
+    <h1 class="logo-text">ChatGPT</h1>
+    <div class="right-section">
+        <div class="theme-switcher">
+        <label class="switch">
+            <input type="checkbox" name="theme">
+            <span class="slider round"></span>
+        </label>
+        </div>
+        <i class="fas fa-fox"></i>
+        <span id="clock"></span>
     </div>
-    <div>
-        <input id="input" type="text" placeholder="请输入您的消息...">
-        <button id="sendButton">发送</button>
+    </header>
+
+    <main>
+    <div id="chat-window">
+        <ul id="message-list"></ul>
     </div>
-    <div id="loading" class="loading" style="display: none;">正在加载...</div>
-    <script>
-        const apiKey = '请在这里填写你的_API_KEY';
+    <div id="input-box">
+        <input type="text" id="message-input" placeholder="Type your message...">
+        <button id="send-button">Send</button>
+    </div>
+    </main>
 
-        async function sendMessage(message) {
-            const responseElement = document.createElement('div');
-            responseElement.textContent = 'ChatGPT: ...';
-            document.getElementById('chat').appendChild(responseElement);
+    <footer>
+    &copy; 2023 ChatGPT
+    </footer>
 
-            try {
-                const response = await fetch('https://api.openai.com/v1/engines/davinci-codex/completions', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${apiKey}`
-                    },
-                    body: JSON.stringify({
-                        prompt: `User: ${message}\nChatGPT:`,
-                        max_tokens: 50,
-                        n: 1,
-                        stop: null,
-                        temperature: 0.5
-                    })
-                });
-
-                const data = await response.json();
-                responseElement.textContent = 'ChatGPT: ' + data.choices[0].text.trim();
-            } catch (error) {
-                responseElement.textContent = 'ChatGPT: 出了点问题，请稍后再试。';
-            }
-
-            document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
-        }
-
-        document.getElementById('sendButton').addEventListener('click', () => {
-            const message = document.getElementById('input').value.trim();
-            if (message) {
-                const messageElement = document.createElement('div');
-                messageElement.textContent = 'User: ' + message;
-                document.getElementById('chat').appendChild(messageElement);
-                document.getElementById('input').value = '';
-                document.getElementById('loading').style.display = 'flex';
-                sendMessage(message).finally(() => {
-                    document.getElementById('loading').style.display = 'none';
-                });
-            }
-        });
-
-        document.getElementById('input').addEventListener('keydown', (event) => {
-            if (event.key === 'Enter') {
-                const message = event.target.value.trim();
-                if (message) {
-                    const messageElement = document.createElement('div');
-                    messageElement.textContent = 'User: ' + message;
-                    document.getElementById('chat').appendChild(messageElement);
-                    event.target.value = '';
-                    document.getElementById('loading').style.display = 'flex';
-                    sendMessage(message).finally(() => {
-                        document.getElementById('loading').style.display = 'none';
-                    });
-                }
-            }
-        });
-    </script>
+    <script src="https://kit.fontawesome.com/8e88e56ba3.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
